refactor: removendo anotation de builder
removendo anotation de builder e adicionando toString e equalAndHashCode

ref #2